# bazel-transitions-demo

./: README.md  WORKSPACE
app/: BUILD.bazel  community_lib.cc  enterprise_data.txt  enterprise_lib.cc  main.cc  runfiles.sh  test_community.sh  test_enterprise.sh
config/: BUILD.bazel
flag/: BUILD.bazel  defs.bzl
